syntax = "proto3";
package proto;

option go_package = "./proto";

service Films {
  rpc GetFilms (ListFilmRequest) returns (ListFilmReply) {}
  rpc GetFilmDetails (FilmDetailRequest) returns (FilmDetailReply) {}
}

message ListFilmRequest {
  string search = 1;
  string page = 2;
}

message FilmDetailRequest {
  string id = 1;
}

message ListFilmReply {
  repeated SearchResult Search = 1;
	string TotalResults = 2;
	string Response = 3;
}

message FilmDetailReply {
  string Title = 1;
	string Year = 2;
	string Rated = 3;
	string Released = 4;
	string Runtime = 5;
	string Genre = 6;
	string Director = 7;
	string Writer = 8;
	string Actors = 9;
	string Plot = 10;
	string Language = 11;
	string Country = 12;
	string Awards = 13;
	string Poster = 14;
	repeated Rating Ratings = 15;
	string Metascore = 16;
	string ImdbRating = 17;
	string ImdbVotes = 18;
	string ImdbID = 19;
	string Type = 20;
	string DVD = 21;
	string BoxOffice = 22;
	string Production = 23;
	string Website = 24;
	string Response = 25;
}

message SearchResult {
  string Title = 1;
	string Year = 2;
	string ImdbId = 3;
	string Type = 4;
	string Poster = 5;
}

message Rating {
  string Source = 1;
  string Value = 2;
}